K8S_Manifest_Files/NameSpace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: testing-env #name should be small letters
  labels:
    teamname: testing-team #name should be small letters
