K8S_Manifest_Files/DaemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
  namespace: testing-env
  labels:
    app: nginx-app
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-ds-pod
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-ds-container
          image: nginx
          ports:
            - containerPort: 80
