K8S_Manifest_Files/Livenessprobe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mavenwebapp-pod
  namespace: testing-env
  labels:
    name: mavenwebapp
spec:
  containers:
  - name: mavenwebapp-container
    image: gmk1995/my-maven-web-application:v1
    resources:
      requests:
        memory: "256Mi"
        cpu: "500m"
      limits:
        memory: "512Mi"
        cpu: "500m"
    readinessProbe:
      httpGet:
        path: /maven-web-application/
        port: 8080
      initialDelaySeconds: 30
      periodSeconds: 10
      timeoutSeconds: 5 
    livenessProbe:
      httpGet:
        path: /maven-web-application/
        port: 8080
      initialDelaySeconds: 60
      periodSeconds: 15
      timeoutSeconds: 5
