K8S_Manifest_Files/Nginx-Pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
namespace: testing-env
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
