K8S_Manifest_Files/NodeSelector-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpresspod
  namespace: testing-env
  labels:
    app: wordpress
spec:
  nodeSelector:
    name: k8s-worker1
  containers:
    - name: wordpress-container
      image: wordpress
      ports:
        - containerPort: 80
