K8S_Manifest_Files/nodejs-all.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nodejs-pod
  namespace: testing-env
  labels:
    app: nodejs-app
spec:
  containers:
    - name: nodejs-container
      image: gmk1995/nodejs-app:v1
      ports:
        - containerPort: 9981
---
#NodePort Service
