K8S_Manifest_Files/ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-webapp-service
  namespace: testing-env
spec:
  type: ClusterIP 
  selector:
    app: maven-webapp
  ports:
    - port: 80
      targetPort: 8080
