K8S_Manifest_Files/Deployment-Recrete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven-recreate-deployment
  namespace: testing-env
  labels:
    app: mavenwebapp
spec:
  replicas: 2
  strategy:
    type: ReCreate
  selector:
    matchLabels:
      app: mavenwebapp
  template:
    metadata:
      labels:
        app: mavenwebapp
    spec:
      containers:
        - name: mavenwebapp-container
          image: dockerhandson/maven-web-application:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebapp-service
  namespace: testing-env
  labels:
    app: mavenwebapp
spec:
  type: NodePort
  selector:
    app: mavenwebapp
  ports:
    - port: 80
      targetPort: 8080
