K8S_Manifest_Files/Deployment-Rolling-Update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-rolling-update-deployment
  namespace: testing-env
  labels:
    app: jenkinsapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  selector:
    matchLabels:
      app: jenkinsapp
  template:
    metadata:
      name: jenkins-pods
      labels:
        app: jenkinsapp
    spec:
      containers:
        - name: jenkins-container
          image: jenkins/jenkins:latest
          ports:
            - containerPort: 8080
---
#Service Declaration for Jenkins App
apiVersion: v1
kind: Service
metadata: 
  name: jenkins-service
  namespace: testing-env
  labels:
    app: jenkinsapp
spec:
  type: NodePort
  selector:
    app: jenkinsapp
  ports:
    - port: 80
      targetPort: 8080
