K8S_Manifest_Files/Jenkins-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkinsp-Deployment
  namespace: testing-env
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins-container
        image: gmk1995/myjenkins-java:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: testing-env
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
  - port: 80
    targetPort: 8080
