K8S_Manifest_Files/Mongo-DB.yaml
#Service Creation for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
