K8S_Manifest_Files/Multi-Container-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: multi-apps
  namespace: testing-env
spec:
  containers:
    - name: java-app-container
      image: dockerhandson/java-web-app:latest
      ports:
        - containerPort: 8080

    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
---
#JavaWebApp Service Declartion
apiVersion: v1
kind: Service
metadata:
  name: multi-container-javawebapp-service
spec:
  type: NodePort
  selector:
     app: multi-apps
  ports:
    - port: 80
      targetPort: 8080

---
#Nginx Service Declartion
apiVersion: v1
kind: Service
metadata:
  name: multi-container-nginx-service
spec:
  type: NodePort
  selector:
    app: multi-apps
  ports:
    - port: 80
      targetPort: 80
---
#Or We can redirect the Port and targetPort with same Service Ports
apiVersion: v1
kind: Service
metadata:
  name: multi-container-service
spec:
  type: NodePort
  selector:
     app: multi-apps
  ports:
    - port: 8080
      targetPort: 8080
      name: tomcat-port
    - port: 80
      targetPort: 80
      name: nginx-port
