K8S_Manifest_Files/NodePort-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-webapp-service #Service Name
  namespace: testing-env
spec:
  selector:
    app: maven-webapp #labels name
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30032 # You comment this. if we don't specify the nodePort range, K8's will automatically assign the port number in range 30000-32767
