K8S_Manifest_Files/ReplicaSet.yaml
#Service creation
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: testing-env
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 9981
