K8S_Manifest_Files/Replication-Control-Pod.yaml
#Service creation
apiVersion: v1
kind: Service
metadata:
  name: maven-webapp-service
  namespace: testing-env
spec:
  type: NodePort
  selector:
    app: maven-webapp
  ports:
    - port: 80
      targetPort: 8080
