K8S_Manifest_Files/sonarqube-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sonarqube-pod
  namespace: testing-env
  labels:
    app: sonarqube
spec:
  containers:
  - name: sonarqube-container
    image: sonarqube
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 9000
---
#Service Creation
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: testing-env
spec:
  type: NodePort
  selector:
    app: sonarqube
  ports:
  - port: 80
    targetPort: 9000
