K8S_Manifest_Files/wordpress-deployment-nodeAffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-pod
  namespace: testing-env
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIngnoreDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - k8s-workers
      containers:
      - name: wordpress-container
        image: wordpress
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
#Service Creation
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: testing-env
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
