K8S_Manifest_Files/Jenkins-Ingress-Controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkinsapp-ingress
  labels:
    name: jenkinsapp
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.gmk.devopspractices.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-service
            port: 
              number: 80
